--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-pillow
-opencv-python
-joblib
-matplotlib
-numpy
-pandas
-scikit-image
-scikit-learn
+numpy>=1.19.0
+pandas>=1.1.0
+opencv-python>=4.5.0
+scikit-learn>=0.24.0
+scikit-image>=0.17.0
+matplotlib>=3.3.0
+tqdm>=4.50.0
+joblib>=1.0.0
